--- a/vagrant/local/Vagrantfile
+++ b/vagrant/local/Vagrantfile
@@ -31,6 +31,10 @@ Vagrant.configure("2") do |config|
     if folder['source'] != '' && folder['target'] != '' && folder['id'] != ''
       nfs = (folder['nfs'] == "true") ? "nfs" : nil
       config.vm.synced_folder "#{folder['source']}", "#{folder['target']}", id: "#{folder['id']}", type: nfs
+      config.vm.synced_folder "../../src/app/storage/", "/var/www/spartz.dev/app/storage/", id: "#{folder['id']}", type: nfs,
+        :owner => "vagrant",
+        :group => "www-data",
+        :mount_options => ["dmode=775","fmode=664"]
     end
   end
 
