--- a/src/composer.json
+++ b/src/composer.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "require": {
     "laravel/framework": "4.1.*",
-    "keboola/csv": "1.1.3"
+    "keboola/csv": "1.1.3",
+    "mockery/mockery": "0.9.0"
   },
   "autoload": {
     "classmap": [
